--- a/source/files/config.properties
+++ b/source/files/config.properties
@@ -1,1 +1,12 @@
-url=
+windowTitle=World Images Dropbox
+panelTitle=World Images Dropbox
+showBrowseButton=yes
+scpPort=11112
+helpURL=https://dropbox.world-images.org/
+acceptNonImageObject=no
+dialogEnabled=yes
+dialogName=DIALOG.xml
+showDialogButton=no
+daScriptName=DA.script
+daLUTName=LUT.properties
+showURL=no
