Final corrections for the Anchor project self-contained variant of CTP Client prior to going live.

--- a/source/files/config.properties
+++ b/source/files/config.properties
@@ -1,8 +1,7 @@
-windowTitle=World Images Dropbox
-panelTitle=World Images Dropbox
+windowTitle=ANCHOR Image Submission Tool
+panelTitle=ANCHOR Image Submission Tool
 showBrowseButton=yes
-scpPort=11112
-helpURL=https://dropbox.world-images.org/
+helpURL=https://anchor.wustl.edu/
 acceptNonImageObject=no
 dialogEnabled=yes
 dialogName=DIALOG.xml
@@ -10,3 +9,4 @@ showDialogButton=no
 daScriptName=DA.script
 daLUTName=LUT.properties
 showURL=no
+httpURL=https://anchor.wustl.edu:443/ctp
