--- a/build.xml
+++ b/build.xml
@@ -43,15 +43,6 @@
 		<mkdir dir="${products}"/>
 	</target>
 
-	<target name="getScripts">
-		<copy overwrite="true"
-			file="${examples}/example-ctp-dicom-anonymizer.script"
-			tofile="${files}/DA.script"/>
-		<copy overwrite="true"
-			file="${examples}/example-dicom-pixel-anonymizer.script"
-			tofile="${files}/DPA.script"/>
-	</target>
-
 	<target name="getLibraryJars">
 		<copy overwrite="true" todir="${libraries}">
 			<fileset dir="${ctp}/libraries">
@@ -65,7 +56,7 @@
 		</copy>
 	</target>
 
-	<target name="jar" depends="init, getScripts, getLibraryJars">
+	<target name="jar" depends="init, getLibraryJars">
 
 		<javac destdir="${build}" optimize="on"
 			    source="1.6"
@@ -85,9 +76,9 @@
 				<attribute name="Main-Class" value="client.CTPClient"/>
 				<attribute name="Implementation-Version" value="${today} @ ${now}"/>
 				<attribute name="Class-Path" value="util.jar log4j.jar dcm4che.jar dcm4che-imageio-rle-2.0.25.jar CTP.jar jdbm.jar"/>
-				<attribute name="Application-Name" value="WoRLD Images CTP Client"/>
+				<attribute name="Application-Name" value="ANCHOR CTP Client"/>
 				<attribute name="Permissions" value="all-permissions"/>
-				<attribute name="Codebase" value="https://world-dropbox.wustl.edu/"/>
+				<attribute name="Codebase" value="https://anchor.wustl.edu/"/>
 				<!--
 				<attribute name="Trusted-Only" value="true"/>
 				<attribute name="Application-Library-Allowable-Codebase" value="https://*.world-images.org https://*.cancerimagingarchive.net"/>
